--- a/app/src/main/res/layout/item_employee.xml
+++ b/app/src/main/res/layout/item_employee.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -6,16 +5,20 @@
     android:orientation="horizontal"
     android:padding="12dp">
 
+    <!-- Text Section (90%) -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.9"
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/nameText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="none"
+            android:maxLines="10"
+            android:singleLine="false"
             android:text="@string/name"
             android:textSize="18sp" />
 
@@ -23,22 +26,30 @@
             android:id="@+id/emailText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="none"
+            android:maxLines="10"
+            android:singleLine="false"
             android:text="@string/email"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/designationText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="none"
+            android:maxLines="10"
+            android:singleLine="false"
             android:text="@string/designation"
             android:textSize="16sp" />
-
     </LinearLayout>
 
+    <!-- Button Section (10%) -->
     <LinearLayout
         android:id="@+id/buttonLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.1"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageButton
@@ -46,23 +57,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/update"
             android:src="@drawable/pencil_square_svgrepo_com"
             app:tint="@color/teal_700" />
-
 
         <ImageButton
             android:id="@+id/deleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/update"
+            android:contentDescription="@string/delete"
             android:src="@drawable/delete_svgrepo_com"
             app:tint="@color/teal_700" />
     </LinearLayout>
-
 </LinearLayout>
